--- a/componentes/footer.html
+++ b/componentes/footer.html
@@ -1,16 +1,15 @@
 <footer>
     <div class="footer-logo">
-        <img class="img-logo" src="/src/assets/img/logo1.png" alt="logo pagina footer">
+        <img class="img-logo" src="../assets/img/logo1.png" alt="logo pagina footer">
     </div>
     <div class="footer-links">
-        <a href="/sobre">Sobre</a>
-        <a href="/contato">Contato</a>
-        <a href="/politica-privacidade">Política de Privacidade</a>
+        <a href="../pages/about.html">Sobre</a>
+        <a href="../pages/politicaeprivacidade.html">Política de Privacidade</a>
     </div>
     <div class="footer-social">
         <a href="https://www.instagram.com/power.traders.do.brasil/">Instagram</a>
         <a href="https://youtube.com/@powertradersdobrasil?si=hvmAGQarPyyi48_G">YouTube</a>
-        <a href="https://www.linkedin.com/groups/9847179/">LinkedIn</a>
+        <a href="https://www.linkedin.com/company/power-traders-do-brasil/">LinkedIn</a>
     </div>
     <div class="footer-contact">
         <p>E-mail: powertradersdobrasil@gmail.com</p>
